--- a/index.html
+++ b/index.html
@@ -286,56 +286,93 @@
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
-/* ==== HAMBURGER ==== */
-.hamburger {
-  display: none;
-  font-size: 30px;
-  color: white;
-  cursor: pointer;
-}
-
+/* ==== RESPONSIVE ==== */
 @media (max-width: 1024px) {
-  .hamburger {
-    display: block;
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 15px 20px;
   }
 
   nav ul {
-    display: none;
     flex-direction: column;
-    width: 100%;
-    background: rgba(20, 0, 40, 0.95);
-    padding: 15px 0;
-    border-top: 2px solid #b400ff;
-    position: absolute;
-    top: 70px;
-    left: 0;
-  }
-
-  nav ul.show {
-    display: flex;
-    animation: menuSlide 0.5s ease forwards;
-  }
-
-  nav ul li {
-    padding: 10px 20px;
+    gap: 15px;
     width: 100%;
   }
 
-  nav ul li.dropdown ul.dropdown-menu {
-    position: relative;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    border-radius: 0;
-    box-shadow: none;
-    padding-left: 20px;
+  .hero h1 {
+    font-size: 45px;
+  }
+
+  .section {
+    font-size: 22px;
+    padding: 0 15px;
+  }
+
+  .popup {
+    padding: 25px;
+    width: 90%;
+  }
+
+  .floating-socials {
+    right: 15px;
+    bottom: 15px;
+    gap: 10px;
+  }
+
+  .floating-socials a {
+    font-size: 30px;
   }
 }
 
-@keyframes menuSlide {
-  from { opacity: 0; transform: translateY(-20px); }
-  to { opacity: 1; transform: translateY(0); }
+@media (max-width: 600px) {
+  nav {
+    padding: 10px 15px;
+  }
+
+  nav h2 {
+    font-size: 16px;
+    text-align: center;
+  }
+
+  nav ul {
+    gap: 10px;
+  }
+
+  .hero h1 {
+    font-size: 28px;
+    line-height: 1.2;
+  }
+
+  .section {
+    font-size: 16px;
+    padding: 0 10px;
+  }
+
+  .section p {
+    line-height: 1.4;
+  }
+
+  .popup h2 {
+    font-size: 20px;
+  }
+
+  .popup p {
+    font-size: 14px;
+  }
+
+  .popup button {
+    font-size: 14px;
+    padding: 8px 18px;
+  }
+
+  .floating-socials a {
+    font-size: 26px;
+  }
+
+  .hamburger {
+    font-size: 26px;
+  }
 }
   </style>
 </head>
