--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <title>MEDYRA - Gaming</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous"></script>
+
   <style>
-    /* ==== RESET ==== */
     * {
       margin: 0;
       padding: 0;
@@ -41,6 +41,8 @@
       backdrop-filter: blur(10px);
       border-bottom: 2px solid #b400ff;
       box-shadow: 0 0 15px #ff00ff;
+      position: relative;
+      z-index: 50;
     }
 
     nav .logo img {
@@ -56,16 +58,11 @@
       align-items: center;
     }
 
-    nav ul li {
-      position: relative;
-    }
-
     nav ul li a {
       text-decoration: none;
       color: white;
-      font-weight: 500;
-      transition: 0.3s;
       text-shadow: 0 0 8px #ff66ff;
+      transition: 0.3s;
       cursor: pointer;
     }
 
@@ -75,11 +72,15 @@
     }
 
     /* ==== DROPDOWN ==== */
+    nav ul li.dropdown {
+      position: relative;
+    }
+
     nav ul li.dropdown ul.dropdown-menu {
+      display: none;
       position: absolute;
       top: 100%;
       left: 0;
-      display: none;
       background: rgba(30, 0, 60, 0.95);
       border: 1px solid #b400ff;
       border-radius: 10px;
@@ -87,28 +88,11 @@
       padding: 10px 0;
       min-width: 180px;
       box-shadow: 0 0 15px #ff00ff;
-      z-index: 10;
     }
 
     nav ul li.dropdown:hover ul.dropdown-menu {
       display: block;
       animation: dropdownFade 0.3s ease forwards;
-    }
-
-    nav ul li.dropdown ul.dropdown-menu li {
-      padding: 10px 20px;
-    }
-
-    nav ul li.dropdown ul.dropdown-menu li a {
-      color: white;
-      text-decoration: none;
-      display: block;
-      transition: 0.3s;
-    }
-
-    nav ul li.dropdown ul.dropdown-menu li a:hover {
-      color: #ff66ff;
-      text-shadow: 0 0 10px #ff00ff;
     }
 
     @keyframes dropdownFade {
@@ -118,22 +102,20 @@
 
     /* ==== HERO ==== */
     .hero {
+      display: none;
       height: calc(100vh - 80px);
-      display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
-      padding: 80px 20px 0 20px;
     }
 
     .hero h1 {
       font-size: 70px;
       color: white;
       opacity: 0;
-      text-shadow: 0 0 25px #ff00ff, 0 0 50px #b400ff;
-      transition: opacity 1s ease, transform 1s ease;
       transform: translateY(-30px);
+      transition: opacity 1s ease, transform 1s ease;
+      text-shadow: 0 0 25px #ff00ff, 0 0 50px #b400ff;
     }
 
     .hero h1.show {
@@ -144,7 +126,7 @@
 
     @keyframes glow {
       from { text-shadow: 0 0 20px #ff66ff, 0 0 40px #b400ff; }
-      to   { text-shadow: 0 0 40px #ff00ff, 0 0 80px #b400ff; }
+      to { text-shadow: 0 0 40px #ff00ff, 0 0 80px #b400ff; }
     }
 
     /* ==== POPUP ==== */
@@ -187,15 +169,11 @@
 
     .popup h2 {
       font-size: 28px;
-      margin-bottom: 10px;
       text-shadow: 0 0 15px #ff00ff;
-      animation: fadeInDown 1s ease forwards;
     }
 
     .popup p {
-      opacity: 0;
-      animation: fadeInDown 1.5s ease forwards;
-      animation-delay: 0.3s;
+      margin-top: 10px;
     }
 
     .popup button {
@@ -208,23 +186,14 @@
       font-size: 18px;
       cursor: pointer;
       transition: 0.3s;
-      opacity: 0;
-      animation: fadeInDown 1.5s ease forwards;
-      animation-delay: 0.6s;
     }
 
     .popup button:hover {
       background: #ff00ff;
       box-shadow: 0 0 15px #ff00ff, 0 0 30px #b400ff;
-      transform: scale(1.05);
     }
 
-    @keyframes fadeInDown {
-      0% { opacity: 0; transform: translateY(-30px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    /* ==== FLOATING SOCIAL ICONS ==== */
+    /* ==== FLOATING ICONS ==== */
     .floating-socials {
       display: none;
       position: fixed;
@@ -239,157 +208,96 @@
       color: white;
       font-size: 40px;
       text-shadow: 0 0 10px #ff66ff;
-      transition: 0.3s;
       animation: float 2s ease-in-out infinite;
+      transition: 0.3s;
     }
 
-    .floating-socials a.youtube:hover {
-      color: #ff0000;
-      text-shadow: 0 0 20px #ff0000;
-    }
-
-    .floating-socials a.discord:hover {
-      color: #7289da;
-      text-shadow: 0 0 20px #7289da;
+    .floating-socials a:hover {
+      transform: scale(1.2);
     }
 
     @keyframes float {
-      0% { transform: translateY(0); }
+      0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
-      100% { transform: translateY(0); }
     }
 
-    /* ==== SECTION SERVEUR ==== */
+    /* ==== SECTIONS ==== */
     .section {
       display: none;
-      height: calc(100vh - 80px);
       justify-content: center;
       align-items: center;
       text-align: center;
-      padding: 0 30px;
+      height: calc(100vh - 80px);
+      padding: 0 20px;
       font-size: 28px;
-      line-height: 1.5;
       animation: fadeIn 1s ease;
-    }
-
-    .section p {
-      color: #fff;
-      text-shadow: 0 0 15px #b400ff;
-    }
-
-    .section strong {
-      color: #ff66ff;
-      text-shadow: 0 0 15px #ff00ff;
     }
 
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-/* ==== RESPONSIVE ==== */
-@media (max-width: 1024px) {
-  nav {
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 15px 20px;
-  }
 
-  nav ul {
-    flex-direction: column;
-    gap: 15px;
-    width: 100%;
-  }
+    .section p strong {
+      color: #ff66ff;
+      text-shadow: 0 0 15px #ff00ff;
+    }
 
-  .hero h1 {
-    font-size: 45px;
-  }
+    /* ==== HAMBURGER ==== */
+    .hamburger {
+      display: none;
+      font-size: 30px;
+      cursor: pointer;
+    }
 
-  .section {
-    font-size: 22px;
-    padding: 0 15px;
-  }
+    /* ==== RESPONSIVE ==== */
+    @media (max-width: 1024px) {
+      nav {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 15px 20px;
+      }
 
-  .popup {
-    padding: 25px;
-    width: 90%;
-  }
+      .hamburger {
+        display: block;
+        color: white;
+      }
 
-  .floating-socials {
-    right: 15px;
-    bottom: 15px;
-    gap: 10px;
-  }
+      nav ul {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background: rgba(30, 0, 60, 0.95);
+        border-top: 1px solid #b400ff;
+        position: absolute;
+        top: 70px;
+        left: 0;
+      }
 
-  .floating-socials a {
-    font-size: 30px;
-  }
-}
+      nav ul.show {
+        display: flex;
+      }
 
-@media (max-width: 600px) {
-  nav {
-    padding: 10px 15px;
-  }
+      .hero h1 { font-size: 40px; }
+      .section { font-size: 20px; }
+    }
 
-  nav h2 {
-    font-size: 16px;
-    text-align: center;
-  }
-
-  nav ul {
-    gap: 10px;
-  }
-
-  .hero h1 {
-    font-size: 28px;
-    line-height: 1.2;
-  }
-
-  .section {
-    font-size: 16px;
-    padding: 0 10px;
-  }
-
-  .section p {
-    line-height: 1.4;
-  }
-
-  .popup h2 {
-    font-size: 20px;
-  }
-
-  .popup p {
-    font-size: 14px;
-  }
-
-  .popup button {
-    font-size: 14px;
-    padding: 8px 18px;
-  }
-
-  .floating-socials a {
-    font-size: 26px;
-  }
-
-  .hamburger {
-    font-size: 26px;
-  }
-}
+    @media (max-width: 600px) {
+      .hero h1 { font-size: 28px; }
+      .section { font-size: 16px; padding: 0 10px; }
+      .popup h2 { font-size: 20px; }
+      .popup p { font-size: 14px; }
+      .popup button { font-size: 14px; padding: 8px 18px; }
+      .floating-socials a { font-size: 28px; }
+    }
   </style>
 </head>
+
 <body>
-
   <nav>
-    <div class="socials">
-      <h2>🌸🌺MEDYRA🌺🌸 Enjoy experience</h2>
-    </div>
-
-    <div class="logo">
-      <img src="logo.png" alt="MEDYRA Logo">
-    </div>
-
-<div class="hamburger" id="hamburger">
-  <i class="fas fa-bars"></i>
-</div>
+    <h2>🌸🌺 MEDYRA 🌺🌸</h2>
+    <div class="logo"><img src="logo.png" alt="MEDYRA Logo"></div>
+    <div class="hamburger"><i class="fas fa-bars"></i></div>
 
     <ul>
       <li><a id="btn-accueil">Accueil</a></li>
@@ -403,7 +311,7 @@
       </li>
       <li><a href="#">Lore</a></li>
       <li><a href="#">L'équipe</a></li>
-      <li><a href="#">Contacte</a></li>
+      <li><a href="#">Contact</a></li>
     </ul>
   </nav>
 
@@ -435,37 +343,41 @@
   </div>
 
   <script>
-    document.addEventListener("DOMContentLoaded", function() {
+    document.addEventListener("DOMContentLoaded", () => {
       const overlay = document.getElementById("overlay");
+      const hero = document.getElementById("accueil");
+      const serveur = document.getElementById("serveur");
       const heroTitle = document.querySelector(".hero h1");
       const floatingIcons = document.querySelector(".floating-socials");
-      const accueil = document.getElementById("accueil");
-      const serveur = document.getElementById("serveur");
+      const menu = document.querySelector("nav ul");
+      const hamburger = document.querySelector(".hamburger");
 
+      // Affiche la popup
       overlay.classList.add("show");
 
+      // Fermer popup
       window.fermerPopup = function() {
         overlay.classList.remove("show");
+        hero.style.display = "flex";
         heroTitle.classList.add("show");
         floatingIcons.style.display = "flex";
       };
 
+      // Navigation entre sections
       document.getElementById("btn-accueil").addEventListener("click", () => {
-        accueil.style.display = "flex";
+        hero.style.display = "flex";
         serveur.style.display = "none";
       });
 
       document.getElementById("btn-serveur").addEventListener("click", () => {
-        accueil.style.display = "none";
+        hero.style.display = "none";
         serveur.style.display = "flex";
       });
 
-      const hamburger = document.getElementById("hamburger");
-const navMenu = document.querySelector("nav ul");
-
-hamburger.addEventListener("click", () => {
-  navMenu.classList.toggle("show");
-});
+      // Menu hamburger
+      hamburger.addEventListener("click", () => {
+        menu.classList.toggle("show");
+      });
     });
   </script>
 </body>
