--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       padding: 10px 0;
       min-width: 180px;
       box-shadow: 0 0 15px #ff00ff;
+      font-size: 20px;
     }
 
     nav ul li.dropdown:hover ul.dropdown-menu {
@@ -315,6 +316,8 @@
       .popup p { font-size: 14px; }
       .popup button { font-size: 14px; padding: 8px 18px; }
       .floating-socials a { font-size: 28px; }
+      nav ul li.dropdown ul.dropdown-menu li a {
+    font-size: 24px; /* taille plus grande pour mobile */
     }
   </style>
 </head>
