--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       50% { transform: translateY(-10px); }
     }
 
-    /* ==== SECTION SERVEUR ==== */
+    /* ==== SECTION SERVEUR / LORE / EQUIPE / CONTACT ==== */
     .section {
       display: none;
       justify-content: center;
@@ -250,6 +250,98 @@
       text-shadow: 0 0 15px #ff00ff;
     }
 
+    /* ==== L'EQUIPE ==== */
+    #equipe h2, #contact h2 {
+      font-size: 32px;
+      color: #ff66ff;
+      margin-bottom: 30px;
+      text-shadow: 0 0 15px #b400ff;
+    }
+
+    .team-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 30px;
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .team-member {
+      background: rgba(30,0,60,0.85);
+      border-radius: 15px;
+      padding: 20px;
+      color: white;
+      box-shadow: 0 0 20px #ff00ff;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .team-member:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 30px #ff66ff;
+    }
+
+    .team-member img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 15px;
+      border: 3px solid #b400ff;
+    }
+
+    .team-member h3 {
+      margin-bottom: 5px;
+      font-size: 20px;
+      color: #ffccff;
+    }
+
+    .team-member p {
+      font-size: 16px;
+      color: #fff;
+    }
+
+    /* ==== CONTACT FORM ==== */
+    #contact form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      width: 100%;
+      max-width: 500px;
+      margin: 0 auto;
+    }
+
+    #contact form input,
+    #contact form textarea {
+      padding: 12px 15px;
+      border-radius: 8px;
+      border: none;
+      font-size: 16px;
+      outline: none;
+    }
+
+    #contact form button {
+      padding: 12px 20px;
+      border-radius: 8px;
+      border: none;
+      font-size: 18px;
+      background: #b400ff;
+      color: white;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    #contact form button:hover {
+      background: #ff00ff;
+      box-shadow: 0 0 15px #ff00ff, 0 0 30px #b400ff;
+    }
+
+    #form-success {
+      display: none;
+      color: #ff66ff;
+      margin-top: 15px;
+    }
+
     /* ==== HAMBURGER ==== */
     .hamburger {
       display: none;
@@ -265,25 +357,11 @@
         padding: 15px 20px;
       }
 
-.nav-title .subtitle {
-  color: #ffccff;
-  font-size: 18px;
-  margin-left: 8px;
-}
-
-@media (max-width: 600px) {
-  .nav-title {
-    text-align: center;
-    line-height: 1.1;
-  }
-
-  .nav-title .subtitle {
-    display: block;
-    font-size: 16px;
-    margin-left: 0;
-    margin-top: 4px;
-  }
-}
+      .nav-title .subtitle {
+        color: #ffccff;
+        font-size: 18px;
+        margin-left: 8px;
+      }
 
       .hamburger {
         display: block;
@@ -310,14 +388,30 @@
     }
 
     @media (max-width: 600px) {
+      .nav-title {
+        text-align: center;
+        line-height: 1.1;
+      }
+
+      .nav-title .subtitle {
+        display: block;
+        font-size: 16px;
+        margin-left: 0;
+        margin-top: 4px;
+      }
+
       .hero h1 { font-size: 28px; }
       .section { font-size: 16px; padding: 0 10px; }
       .popup h2 { font-size: 20px; }
       .popup p { font-size: 14px; }
       .popup button { font-size: 14px; padding: 8px 18px; }
       .floating-socials a { font-size: 28px; }
-      nav ul li.dropdown ul.dropdown-menu li a {
-    font-size: 24px; /* taille plus grande pour mobile */
+      nav ul li.dropdown ul.dropdown-menu li a { font-size: 24px; }
+      .team-member img { width: 100px; height: 100px; }
+      .team-member h3 { font-size: 18px; }
+      .team-member p { font-size: 14px; }
+      #contact form input, #contact form textarea { font-size: 14px; padding: 10px; }
+      #contact form button { font-size: 16px; padding: 10px; }
     }
   </style>
 </head>
@@ -325,9 +419,9 @@
 <body>
   <nav>
     <div class="nav-title">
-  🌸🌺 MEDYRA 🌺🌸 
-  <span class="subtitle">Enjoy experience</span>
-</div>
+      🌸🌺 MEDYRA 🌺🌸 
+      <span class="subtitle">Enjoy experience</span>
+    </div>
     <div class="logo"><img src="logo.png" alt="MEDYRA Logo"></div>
     <div class="hamburger"><i class="fas fa-bars"></i></div>
 
@@ -342,8 +436,8 @@
         </ul>
       </li>
       <li><a id="btn-lore">Lore</a></li>
-      <li><a href="#">L'équipe</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a id="btn-equipe">L'équipe</a></li>
+      <li><a id="btn-contact">Contact</a></li>
     </ul>
   </nav>
 
@@ -354,7 +448,7 @@
   <section class="section" id="serveur">
     <p>
       💫 <strong>Medyra</strong> est un <strong>serveur convivial</strong> rempli d’aventures et de fun ! 💫<br><br>
-      🌍 Explore les incroyables maps inspirées de <strong>"The Walking Dead"</strong> 🧟‍♂️,<br>
+      🌍 Explore les incroyables maps inspirées des jeux <strong>"the walking dead" dévellopés par telltale games et repris par skybound games</strong> 🧟‍♂️,<br>
       🏰 Participe à des <strong>événements épiques</strong> sur la map de <strong>Fort Boyard</strong> 💪,<br>
       💬 Détends-toi dans le <strong>Lobby</strong>, rencontre d’autres joueurs et crée-toi une équipe ! 🎮<br><br>
       ✨ Alors... <strong>rejoins l’aventure dès maintenant !</strong> 🚀
@@ -373,7 +467,7 @@
       En <strong>2024</strong>, le fort est entièrement <strong>remis à neuf</strong> 🛠️ grâce à des plans à taille réelle  
       et aux cellules officielles de chaque saison, atteignant sa <em>version bêta</em> ✨.<br><br>
 
-      Aujourd’hui, le fort s’agrandit avec des <strong>maps visite The Walking Dead</strong> créées par des <strong>builders talentueux</strong> 🧱.  
+      Aujourd’hui, le fort s’agrandit avec des <strong>maps visite inspirés de "the walking dead" dévellopés par telltale games et repris par skybound games</strong>, créées par des <strong>builders talentueux</strong> 🧱.  
       Le serveur devient alors public sous le nom de <strong>MEDYRA</strong> — inspiré de <em>Médusa</em>,  
       la créature mythologique marine 🐍🌊.<br><br>
 
@@ -384,6 +478,43 @@
       <em>"Ce qui compte, ce n’est pas le résultat, mais la distance parcourue."</em><br><br>
       💖 <strong>MEDYRA — Enjoy experience.</strong> 💖
     </p>
+  </section>
+
+  <section class="section" id="equipe">
+    <h2>👥 Notre Équipe</h2>
+    <div class="team-container">
+      <div class="team-member">
+        <img src="ppGlooper.jpg" alt="Membre 1">
+        <h3>Glooper99</h3>
+        <p>fondateur du projet </p>
+      </div>
+      <div class="team-member">
+        <img src="ppNatyan.jpeg" alt="Membre 2">
+        <h3>Natyan</h3>
+        <p>Co-Fondateur et STAFF </p>
+      </div>
+      <div class="team-member">
+        <img src="pp3.jpg" alt="Membre 2">
+        <h3>Arrkey</h3>
+        <p>Encadrement et STAFF </p>
+      </div>
+      <div class="team-member">
+        <img src="pp4.png" alt="Membre 2">
+        <h3>MrBaguette07</h3>
+        <p>gestion serveur</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section" id="contact">
+    <h2>✉️ Contactez-nous</h2>
+    <form id="contact-form" method="POST" action="save_message.php">
+      <input type="email" name="email" placeholder="Votre adresse email" required>
+      <input type="text" name="pseudo" placeholder="Votre pseudo" required>
+      <textarea name="message" placeholder="Votre message" rows="5" required></textarea>
+      <button type="submit">Envoyer</button>
+    </form>
+    <p id="form-success">✅ Message envoyé avec succès !</p>
   </section>
 
   <div id="overlay" class="overlay">
@@ -405,6 +536,8 @@
       const hero = document.getElementById("accueil");
       const serveur = document.getElementById("serveur");
       const lore = document.getElementById("lore");
+      const equipe = document.getElementById("equipe");
+      const contact = document.getElementById("contact");
       const heroTitle = document.querySelector(".hero h1");
       const floatingIcons = document.querySelector(".floating-socials");
       const menu = document.querySelector("nav ul");
@@ -417,32 +550,73 @@
       window.fermerPopup = function() {
         overlay.classList.remove("show");
         hero.style.display = "flex";
-        setTimeout(() => heroTitle.classList.add("show"), 300); // apparition douce du texte
+        setTimeout(() => heroTitle.classList.add("show"), 300);
         floatingIcons.style.display = "flex";
       };
 
       // Navigation
-document.getElementById("btn-accueil").addEventListener("click", () => {
-  hero.style.display = "flex";
-  serveur.style.display = "none";
-  lore.style.display = "none";
-});
+      document.getElementById("btn-accueil").addEventListener("click", () => {
+        hero.style.display = "flex";
+        serveur.style.display = "none";
+        lore.style.display = "none";
+        equipe.style.display = "none";
+        contact.style.display = "none";
+      });
 
-document.getElementById("btn-serveur").addEventListener("click", () => {
-  hero.style.display = "none";
-  serveur.style.display = "flex";
-  lore.style.display = "none";
-});
+      document.getElementById("btn-serveur").addEventListener("click", () => {
+        hero.style.display = "none";
+        serveur.style.display = "flex";
+        lore.style.display = "none";
+        equipe.style.display = "none";
+        contact.style.display = "none";
+      });
 
-document.getElementById("btn-lore").addEventListener("click", () => {
-  hero.style.display = "none";
-  serveur.style.display = "none";
-  lore.style.display = "flex";
-});
+      document.getElementById("btn-lore").addEventListener("click", () => {
+        hero.style.display = "none";
+        serveur.style.display = "none";
+        lore.style.display = "flex";
+        equipe.style.display = "none";
+        contact.style.display = "none";
+      });
+
+      document.getElementById("btn-equipe").addEventListener("click", () => {
+        hero.style.display = "none";
+        serveur.style.display = "none";
+        lore.style.display = "none";
+        equipe.style.display = "flex";
+        contact.style.display = "none";
+      });
+
+      document.getElementById("btn-contact").addEventListener("click", () => {
+        hero.style.display = "none";
+        serveur.style.display = "none";
+        lore.style.display = "none";
+        equipe.style.display = "none";
+        contact.style.display = "flex";
+      });
 
       // Menu hamburger
       hamburger.addEventListener("click", () => {
         menu.classList.toggle("show");
+      });
+
+      // Formulaire contact
+      const form = document.getElementById("contact-form");
+      const success = document.getElementById("form-success");
+
+      form.addEventListener("submit", function(e){
+        e.preventDefault();
+        const formData = new FormData(form);
+        fetch("save_message.php", {
+          method: "POST",
+          body: formData
+        })
+        .then(res => res.text())
+        .then(() => {
+          success.style.display = "block";
+          form.reset();
+        })
+        .catch(err => console.error(err));
       });
     });
   </script>
