--- a/index.html
+++ b/index.html
@@ -437,7 +437,8 @@
       </li>
       <li><a id="btn-lore">Lore</a></li>
       <li><a id="btn-equipe">L'équipe</a></li>
-      <li><a id="btn-contact">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="admin.html">Admin</a></li>
     </ul>
   </nav>
 
@@ -504,17 +505,6 @@
         <p>gestion serveur</p>
       </div>
     </div>
-  </section>
-
-  <section class="section" id="contact">
-    <h2>✉️ Contactez-nous</h2>
-    <form id="contact-form" method="POST" action="save_message.php">
-      <input type="email" name="email" placeholder="Votre adresse email" required>
-      <input type="text" name="pseudo" placeholder="Votre pseudo" required>
-      <textarea name="message" placeholder="Votre message" rows="5" required></textarea>
-      <button type="submit">Envoyer</button>
-    </form>
-    <p id="form-success">✅ Message envoyé avec succès !</p>
   </section>
 
   <div id="overlay" class="overlay">
