--- a/admin.html
+++ b/admin.html
@@ -5,20 +5,88 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Admin - MEDYRA</title>
 <style>
-  body { font-family: Arial, sans-serif; background: #200030; color: white; text-align: center; padding: 50px; }
-  input, button { padding: 12px; margin: 10px 0; border-radius: 8px; border: none; width: 250px; max-width: 90%; }
-  button { background: #b400ff; color: white; cursor: pointer; transition: 0.3s; }
+  /* ==== FOND ET FILTRE ==== */
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    color: white;
+    text-align: center;
+    overflow-x: hidden;
+    height: 100vh;
+    background: url('fond.png') no-repeat center center;
+    background-size: cover;
+    position: relative;
+  }
+
+  body::before {
+    content: "";
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(80,0,120,0.6); /* filtre violet */
+    z-index: -1;
+  }
+
+  /* ==== ANIMATION ==== */
+  .fade-in {
+    opacity: 0;
+    transform: translateY(-30px);
+    animation: fadeIn 1s forwards;
+  }
+  h1 { animation-delay: 0.2s; }
+  #login-section { animation-delay: 0.4s; }
+  #admin-section { animation-delay: 0.6s; }
+
+  @keyframes fadeIn {
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  /* ==== FORMULAIRES ET MESSAGES ==== */
+  input, button { padding: 12px; margin: 10px 0; border-radius: 8px; border: none; width: 250px; max-width: 90%; font-size: 16px; }
+  button { background: black; color: white; cursor: pointer; transition: 0.3s; }
   button:hover { background: #ff00ff; }
+
   #messages { margin-top: 30px; text-align: left; max-width: 800px; margin-left: auto; margin-right: auto; }
   .message { background: rgba(30,0,60,0.85); padding: 15px; border-radius: 10px; margin-bottom: 10px; }
+
   #login-error { color: #ff6666; }
+
+  /* ==== BOUTON RETOUR ==== */
+  .back-btn {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  padding: 12px 25px; /* taille visuelle du bouton */
+  background: rgba(0,0,0,0.8);
+  border: 2px solid #b400ff;
+  border-radius: 12px;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+  text-shadow: 0 0 5px #ff66ff, 0 0 10px #b400ff;
+  box-shadow: 0 0 15px #ff66ff, 0 0 25px #b400ff;
+  transition: 0.3s;
+  z-index: 1000;
+}
+
+/* pseudo-élément pour augmenter la surface cliquable */
+.back-btn::before {
+  content: "";
+  position: absolute;
+  top: -20px; bottom: -20px;
+  left: -20px; right: -20px;
+}
 </style>
 </head>
 <body>
 
-<h1>🔐 Espace Admin - MEDYRA</h1>
+<button class="back-btn" onclick="history.back()">← Retour</button>
 
-<div id="login-section">
+<h1 class="fade-in">🔐 Espace Admin - MEDYRA</h1>
+
+<div id="login-section" class="fade-in">
   <p>Veuillez vous connecter pour accéder aux messages :</p>
   <input type="text" id="username" placeholder="Identifiant" required><br>
   <input type="password" id="password" placeholder="Mot de passe" required><br>
@@ -28,14 +96,13 @@
 </div>
 
 <div id="admin-section" style="display:none;">
-  <h2>📬 Messages reçus</h2>
-  <div id="messages"></div>
+  <h2 class="fade-in">📬 Messages reçus</h2>
+  <div id="messages" class="fade-in"></div>
 </div>
 
 <script>
-  // Identifiants de connexion admin
-  const ADMIN_USERNAME = "admin";
-  const ADMIN_PASSWORD = "medyra123";
+  const ADMIN_USERNAME = "Glo_Kyr";
+  const ADMIN_PASSWORD = "MedyraFBM33";
   const ADMIN_CODE = "102020";
 
   const loginBtn = document.getElementById("login-btn");
@@ -54,20 +121,17 @@
     }
   });
 
-  // Fonction pour charger les messages depuis localStorage
   function loadMessages(){
     const messages = JSON.parse(localStorage.getItem("medyra_messages") || "[]");
     const container = document.getElementById("messages");
     container.innerHTML = "";
-
     if(messages.length === 0){
       container.innerHTML = "<p>Aucun message reçu pour le moment.</p>";
       return;
     }
-
     messages.forEach(msg => {
       const div = document.createElement("div");
-      div.classList.add("message");
+      div.classList.add("message", "fade-in");
       div.innerHTML = `<strong>${msg.pseudo}</strong> &lt;${msg.email}&gt; <em>le ${msg.date}</em><br>${msg.message}`;
       container.appendChild(div);
     });
@@ -76,4 +140,3 @@
 
 </body>
 </html>
-
