--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,95 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact - MEDYRA</title>
 <style>
-  body { font-family: Arial, sans-serif; background: #200030; color: white; text-align: center; padding: 50px; }
-  input, textarea, button { padding: 12px; margin: 10px 0; border-radius: 8px; border: none; width: 300px; max-width: 90%; }
-  button { background: #b400ff; color: white; cursor: pointer; transition: 0.3s; }
+  /* ==== FOND ET FILTRE ==== */
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    color: white;
+    text-align: center;
+    overflow-x: hidden;
+    height: 100vh;
+    background: url('fond.png') no-repeat center center;
+    background-size: cover;
+    position: relative;
+  }
+
+  body::before {
+    content: "";
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(80,0,120,0.6); /* filtre violet */
+    z-index: -1;
+  }
+
+  h1, form, #form-success {
+    opacity: 0;
+    transform: translateY(-30px);
+    animation: fadeIn 1s forwards;
+  }
+
+  h1 { animation-delay: 0.2s; }
+  form { animation-delay: 0.4s; }
+  #form-success { animation-delay: 0.6s; }
+
+  @keyframes fadeIn {
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  /* ==== FORMULAIRE ==== */
+  form { display: inline-block; margin-top: 50px; }
+  input, textarea, button {
+    padding: 12px;
+    margin: 10px 0;
+    border-radius: 8px;
+    border: none;
+    width: 300px;
+    max-width: 90%;
+    font-size: 16px;
+  }
+  button {
+    background: black;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+  }
   button:hover { background: #ff00ff; }
+
   #form-success { color: #ff66ff; margin-top: 15px; display: none; }
+
+  /* ==== BOUTON RETOUR ==== */
+  .back-btn {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  padding: 12px 25px; /* taille visuelle du bouton */
+  background: rgba(0,0,0,0.8);
+  border: 2px solid #b400ff;
+  border-radius: 12px;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+  text-shadow: 0 0 5px #ff66ff, 0 0 10px #b400ff;
+  box-shadow: 0 0 15px #ff66ff, 0 0 25px #b400ff;
+  transition: 0.3s;
+  z-index: 1000;
+}
+
+/* pseudo-élément pour augmenter la surface cliquable */
+.back-btn::before {
+  content: "";
+  position: absolute;
+  top: -20px; bottom: -20px;
+  left: -20px; right: -20px;
+}
 </style>
 </head>
 <body>
+
+<button class="back-btn" onclick="history.back()">← Retour</button>
 
 <h1>✉️ Contactez-nous</h1>
 
@@ -27,9 +108,9 @@
 
 <script>
   function saveMessage(pseudo, email, message) {
-    const msgs = JSON.parse(localStorage.getItem("medyra_messages") || "[]");
-    msgs.push({ pseudo, email, message, date: new Date().toLocaleString() });
-    localStorage.setItem("medyra_messages", JSON.stringify(msgs));
+    const messages = JSON.parse(localStorage.getItem("medyra_messages") || "[]");
+    messages.push({ pseudo, email, message, date: new Date().toLocaleString() });
+    localStorage.setItem("medyra_messages", JSON.stringify(messages));
   }
 
   document.getElementById("contact-form").addEventListener("submit", function(e){
@@ -48,4 +129,3 @@
 
 </body>
 </html>
-
