--- a/admin.html
+++ b/admin.html
@@ -102,8 +102,8 @@
 </div>
 
 <script>
-  const ADMIN_USERNAME = "Glo_Kyr";
-  const ADMIN_PASSWORD = "MedyraFBM33";
+  const ADMIN_USERNAME = "admin";
+  const ADMIN_PASSWORD = "medyra123";
   const ADMIN_CODE = "102020";
 
   const loginBtn = document.getElementById("login-btn");
