--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
       if (isMobile) {
         window.location.href = "mobile.html";
       } else {
-        window.location.href = "index.html";
+        window.location.href = "indexPC.html";
       }
     }, 1500);
   </script>
