--- a/mobile.html
+++ b/mobile.html
@@ -198,9 +198,10 @@
   <section class="section">
     <p>
       💫 <strong>Medyra</strong> est un <strong>serveur convivial</strong> rempli d’aventures et de fun ! 💫<br><br>
-      🌍 Explore les maps inspirées de <strong>"The Walking Dead"</strong> 🧟‍♂️,<br>
-      🏰 Découvre le mythique <strong>Fort Boyard</strong> 💪,<br>
-      💬 Rejoins la communauté et crée ton équipe ! 🎮
+      🌍 Explore les incroyables maps inspirées des jeux <strong>"the walking dead" dévellopés par telltale games et repris par skybound games</strong> 🧟‍♂️,<br>
+      🏰 Participe à des <strong>événements épiques</strong> sur la map de <strong>Fort Boyard</strong> 💪,<br>
+      💬 Détends-toi dans le <strong>Lobby</strong>, rencontre d’autres joueurs et crée-toi une équipe ! 🎮<br><br>
+      ✨ Alors... <strong>rejoins l’aventure dès maintenant !</strong> 🚀
     </p>
     <a href="https://fortboyardminecraft.github.io/accueil/index.html" target="_blank" class="btn-fort">Explorer le Fort</a>
   </section>
@@ -208,9 +209,25 @@
   <section class="section">
     <p>
       📜 <strong>L'histoire de Medyra</strong> 🌊<br><br>
-      Né en <strong>2020</strong> sur PS3, <em>Fort Boyard Minecraft</em> est devenu un véritable serveur communautaire.<br>
-      En <strong>2024</strong>, il évolue sous le nom de <strong>MEDYRA</strong>, un monde d’aventures marines inspiré de <em>Médusa</em> 🐍🌊.<br><br>
-      💖 <strong>Enjoy Experience.</strong>
+
+      Le projet <strong>Fort Boyard Minecraft</strong> a vu le jour en <strong>octobre 2020</strong> sur l’édition <strong>PS3</strong>. 🎮  
+      Il connaîtra un petit succès et accueillera ses premiers candidats jusqu’en <strong>2023</strong> 🏰.  
+      Le fort sera ensuite importé sur <strong>Aternos</strong> en tant que <em>version alpha</em> du serveur,  
+      enrichi de <strong>plugins</strong> et de versions plus réalistes du fort — avec les accès, les escaliers et les cellules d’origine ⚙️.<br><br>
+
+      En <strong>2024</strong>, le fort est entièrement <strong>remis à neuf</strong> 🛠️ grâce à des plans à taille réelle  
+      et aux cellules officielles de chaque saison, atteignant sa <em>version bêta</em> ✨.<br><br>
+
+      Aujourd’hui, le fort s’agrandit avec des <strong>maps visite inspirés de "the walking dead" dévellopés par telltale games et repris par skybound games</strong>, créées par des <strong>builders talentueux</strong> 🧱.  
+      Le serveur devient alors public sous le nom de <strong>MEDYRA</strong> — inspiré de <em>Médusa</em>,  
+      la créature mythologique marine 🐍🌊.<br><br>
+
+      Hébergé chez <strong>SeaPalm</strong> 🌐 et <strong>partenaire</strong> du serveur numéro 1 en France  
+      pour Fort Boyard Minecraft, <strong>Britania</strong> 🇫🇷💪,<br>
+      nous espérons que <strong>Medrya</strong> vous plaira et que vous <strong>apprécierez l’expérience</strong> 💫.<br><br>
+
+      <em>"Ce qui compte, ce n’est pas le résultat, mais la distance parcourue."</em><br><br>
+      💖 <strong>MEDYRA — Enjoy experience.</strong> 💖
     </p>
   </section>
 
