--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact - MEDYRA</title>
 <style>
-  /* ==== FOND ET FILTRE ==== */
   body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -17,32 +16,25 @@
     background-size: cover;
     position: relative;
   }
-
   body::before {
     content: "";
     position: fixed;
     top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(80,0,120,0.6); /* filtre violet */
+    width: 100%; height: 100%;
+    background: rgba(80,0,120,0.6);
     z-index: -1;
   }
-
   h1, form, #form-success {
     opacity: 0;
     transform: translateY(-30px);
     animation: fadeIn 1s forwards;
   }
-
   h1 { animation-delay: 0.2s; }
   form { animation-delay: 0.4s; }
   #form-success { animation-delay: 0.6s; }
-
   @keyframes fadeIn {
     to { opacity: 1; transform: translateY(0); }
   }
-
-  /* ==== FORMULAIRE ==== */
   form { display: inline-block; margin-top: 50px; }
   input, textarea, button {
     padding: 12px;
@@ -60,35 +52,30 @@
     transition: 0.3s;
   }
   button:hover { background: #ff00ff; }
-
   #form-success { color: #ff66ff; margin-top: 15px; display: none; }
-
-  /* ==== BOUTON RETOUR ==== */
   .back-btn {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  padding: 12px 25px; /* taille visuelle du bouton */
-  background: rgba(0,0,0,0.8);
-  border: 2px solid #b400ff;
-  border-radius: 12px;
-  color: white;
-  font-weight: bold;
-  font-size: 16px;
-  cursor: pointer;
-  text-shadow: 0 0 5px #ff66ff, 0 0 10px #b400ff;
-  box-shadow: 0 0 15px #ff66ff, 0 0 25px #b400ff;
-  transition: 0.3s;
-  z-index: 1000;
-}
-
-/* pseudo-élément pour augmenter la surface cliquable */
-.back-btn::before {
-  content: "";
-  position: absolute;
-  top: -20px; bottom: -20px;
-  left: -20px; right: -20px;
-}
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    padding: 12px 25px;
+    background: rgba(0,0,0,0.8);
+    border: 2px solid #b400ff;
+    border-radius: 12px;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    text-shadow: 0 0 5px #ff66ff, 0 0 10px #b400ff;
+    box-shadow: 0 0 15px #ff66ff, 0 0 25px #b400ff;
+    transition: 0.3s;
+    z-index: 1000;
+  }
+  .back-btn::before {
+    content: "";
+    position: absolute;
+    top: -20px; bottom: -20px;
+    left: -20px; right: -20px;
+  }
 </style>
 </head>
 <body>
@@ -97,36 +84,38 @@
 
 <h1>✉️ Contactez-nous</h1>
 
-<form id="contact-form">
-  <input type="email" id="email" placeholder="Votre adresse email" required><br>
-  <input type="text" id="pseudo" placeholder="Votre pseudo" required><br>
-  <textarea id="message" placeholder="Votre message" rows="5" required></textarea><br>
+<!-- Formulaire envoyé vers Getform -->
+<form id="contact-form" action="https://getform.io/f/{https://getform.io/f/bvrmneeb}" method="POST">
+  <input type="email" name="email" placeholder="Votre adresse email" required><br>
+  <input type="text" name="pseudo" placeholder="Votre pseudo" required><br>
+  <textarea name="message" placeholder="Votre message" rows="5" required></textarea><br>
   <button type="submit">Envoyer</button>
 </form>
 
 <p id="form-success">✅ Message envoyé avec succès !</p>
 
 <script>
-  function saveMessage(pseudo, email, message) {
-    const messages = JSON.parse(localStorage.getItem("medyra_messages") || "[]");
-    messages.push({ pseudo, email, message, date: new Date().toLocaleString() });
-    localStorage.setItem("medyra_messages", JSON.stringify(messages));
-  }
+const form = document.getElementById("contact-form");
+const successMsg = document.getElementById("form-success");
 
-  document.getElementById("contact-form").addEventListener("submit", function(e){
-    e.preventDefault();
-    const email = document.getElementById("email").value.trim();
-    const pseudo = document.getElementById("pseudo").value.trim();
-    const message = document.getElementById("message").value.trim();
+form.addEventListener("submit", function(e){
+  e.preventDefault();
 
-    if(email && pseudo && message){
-      saveMessage(pseudo, email, message);
-      document.getElementById("form-success").style.display = "block";
-      this.reset();
+  fetch(form.action, {
+    method: 'POST',
+    body: new FormData(form)
+  })
+  .then(res => {
+    if(res.ok){
+      successMsg.style.display = "block";
+      form.reset();
+    } else {
+      alert("Erreur lors de l'envoi du message !");
     }
-  });
+  })
+  .catch(err => console.error(err));
+});
 </script>
 
 </body>
 </html>
-
