--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
 document.getElementById("contact-form").addEventListener("submit", function(e){
   e.preventDefault();
   
-  emailjs.sendForm("service_6uv3ezq", "template_4agazklD", this)
+  emailjs.sendForm("service_7bj4c9v", "template_4agazklD", this)
     .then(() => {
       document.getElementById("form-success").style.display = "block";
       this.reset();
